--- a/angular.json
+++ b/angular.json
@@ -127,6 +127,41 @@
           }
         }
       }
+    },
+    "hg-dynamic-form": {
+      "root": "projects/hg-dynamic-form",
+      "sourceRoot": "projects/hg-dynamic-form/src",
+      "projectType": "library",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/hg-dynamic-form/tsconfig.lib.json",
+            "project": "projects/hg-dynamic-form/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/hg-dynamic-form/src/test.ts",
+            "tsConfig": "projects/hg-dynamic-form/tsconfig.spec.json",
+            "karmaConfig": "projects/hg-dynamic-form/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/hg-dynamic-form/tsconfig.lib.json",
+              "projects/hg-dynamic-form/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
   "defaultProject": "dynamic-form"
