--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^6.1.0",
     "amazing-time-picker-angular6": "^1.5.5",
     "core-js": "^2.5.4",
+    "dynamic-form-unizkm-hg": "^1.1.2",
     "hammerjs": "^2.0.8",
     "ng-packagr": "^5.3.0",
     "ngx-skeleton-loader": "^1.2.2",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-ng-packagr": "~0.8.0",
     "@angular/cli": "~6.2.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
@@ -47,8 +49,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.1.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   }
