--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "hg-dynamic-form": [
+        "dist/hg-dynamic-form"
+      ],
+      "hg-dynamic-form/*": [
+        "dist/hg-dynamic-form/*"
+      ]
+    }
   }
 }
