--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@angular/router": "^6.1.0",
     "amazing-time-picker-angular6": "^1.5.5",
     "core-js": "^2.5.4",
-    "dynamic-form-unizkm-hg": "^1.1.2",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.14",
     "ng-packagr": "^5.3.0",
     "ngx-skeleton-loader": "^1.2.2",
     "rxjs": "~6.2.0",
